--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,16 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
-    />
+    <title>Volt</title>
+    <!-- Styles will be moved to App.css or handled within React components -->
   </head>
 
   <body>
     <div id="root"></div>
+    <!-- Changed script source to main.tsx for React -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
